@@ -5,6 +5,7 @@ Version 3.2
 Patchlevel Xx (Xxx 20xx)
 
 NEW FEATURES:
+	o Embed pdf files into ps output by converting the pdf to eps.
 	o Allow negative arrow widths. This might be useful for asymmetric arrow
 	  tips, which can thus be mirrored around the corresponding line.
 
